--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "react-scripts --openssl-legacy-provider start",
     "lint": "next lint",
     "heroku-postbuild": "npm run build"
   },
@@ -26,9 +26,5 @@
   "devDependencies": {
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0"
-  },
-  "engines": {
-    "node": "14.17.1",
-    "npm": "6.14.13"
-   }
+  }
 }
